tests/neg/java-ann-extends-separate/Test_2.scala
def test(x: Ann_1) =
  val y: scala.annotation.Annotation = x // error
